Empese creacion del proyecto

--- a/index.html
+++ b/index.html
@@ -12,6 +12,38 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+   
+    <header class="header">
+        <div class="contenedor contenido-header">     
+            <div class="imagen-header">
+               <picture>
+                   <source
+                        sizes="1920w"
+                        srcset="img/header.avif 1920w" 
+                        type="image/avif">
+                   <source
+                        sizes="1920w" 
+                        srcset="img/header.webp 1920w" 
+                        type="image/webp">
+                    <source
+                        sizes="1920w"
+                        srcset="img/header.jpg 1920w"
+                        type="image/jpg">
+                   <img loading="lazy" decoding="async" src="img/header.jpg"
+                        lazyalt="imagen" width="1000" height="600">
+               </picture>
+            
+            </div>  <!-- .imagen-header -->
+
+            <div class="texto-header">
+                <p class="tagline-producto">Sonido Profesional</p>
+                <h1 class="nombre-producto">TechPRO</h1>
+                <p class="descripcion-producto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates veniam eum quasi sed adipisci quaerat placeat hic perferendis ipsam minima? Accusantium aliquid tempora, expedita culpa debitis neque soluta perferendis. Aperiam.</p>
+                <p class="precio-producto">Desde <span>$299</span></p>
+            </div>
+        </div>
+
+    </header>
     
 </body>
 </html>
